Bug 35254 - Radeon TTM Crash With E-350 Fusion
Summary: Radeon TTM Crash With E-350 Fusion
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-12 09:31 UTC by Michael Larabel
Modified: 2011-06-12 07:13 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg 1 (63.61 KB, text/plain)
2011-03-12 09:31 UTC, Michael Larabel
no flags Details
dmesg 2 (247.29 KB, text/plain)
2011-03-12 09:31 UTC, Michael Larabel
no flags Details
attempted fix. (1.17 KB, patch)
2011-03-13 00:19 UTC, Dave Airlie
no flags Details | Splinter Review
attempted fix 2. (1.36 KB, patch)
2011-03-13 03:14 UTC, Dave Airlie
no flags Details | Splinter Review
attempt 3 to fix VRAM size and hopefully this bug. (9.84 KB, patch)
2011-03-13 17:03 UTC, Dave Airlie
no flags Details | Splinter Review

Description Michael Larabel 2011-03-12 09:31:07 UTC
Created attachment 44397 [details]
dmesg 1

Dave & co: Another Fusion problem on my E35M1-M PRO setup... With Git of all major components as of few days plus the kernel with the Fusion fix talked about a few days ago, Warsow and Padman at least are crashing on load, 100% reproducible so far for me (OpenArena though runs fine, haven't tested anything else yet). Two example dmesg outputs attached, plus one with drm.debug=15.
Comment 1 Michael Larabel 2011-03-12 09:31:25 UTC
Created attachment 44398 [details]
dmesg 2
Comment 2 Dave Airlie 2011-03-13 00:19:10 UTC
Created attachment 44408 [details] [review]
attempted fix.

This seems like a regression since Jerome's "fix".
Comment 3 Dave Airlie 2011-03-13 03:14:06 UTC
Created attachment 44409 [details] [review]
attempted fix 2.

actually try this one instead.
Comment 4 Dave Airlie 2011-03-13 17:03:31 UTC
Created attachment 44426 [details] [review]
attempt 3  to fix VRAM size and hopefully this bug.

try to limit vram size alternate method.
Comment 5 Michael Larabel 2011-03-15 09:43:56 UTC
Just got around to test the 2.6.38 final kernel and the system ends up going down completely - Padman loading screen -> blank screen for ~2 seconds -> BIOS screen as the system just restarted. That's when launching Padman or related games where previously there was this TTM issue.
Comment 7 Oliver Henshaw 2011-06-12 05:24:26 UTC
http://www.phoronix.com/scan.php?page=article&item=amd_fusion_fixed&num=1 suggests this is fixed, unless I'm missing something.
Comment 8 Alex Deucher 2011-06-12 07:13:39 UTC
Please reopen if you are still having issues.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.